@@ -70,8 +70,8 @@ class SusyNtAna : public TSelector, public SusyNtTools
     // Get event weight - contains generator, pileup, xsec, and lumi weights
     // Default weight uses A-L lumi and pileup weights
     // You can supply a different luminosity, but the pileup weights will store correspond to the default dataset
-    virtual float getEventWeight(float lumi = LUMI_A_L, bool useSumwMap = false, bool useSusyXsec = false, 
-                                 MCWeighter::WeightSys sys = MCWeighter::Sys_NOM);
+    virtual float getEventWeight(float lumi = LUMI_A_L, bool useSumwMap = false, bool useProcSumw = false,
+                                 bool useSusyXsec = false, MCWeighter::WeightSys sys = MCWeighter::Sys_NOM);
     // Temporary fixed version for n0105
     //virtual float getEventWeightFixed(unsigned int mcChannel, float lumi = LUMI_A_L);
     // Use this function to scale MC to the A-B3 unblinded dataset
